kubernetes/monitoring/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: monitoring
  labels:
    app: jenkins
spec:
  rules:
    - host: jenkins.minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
